# caterpillar_robot_mkt

./: COMANDOS_EJECUCION.txt  README.md  build_robot.sh  install_raspberry.sh  install_roboclaw_udev.sh  install_robot_dependencies.sh  install_ros2_jazzy.sh  nota.txt  run_all.sh  run_interface.sh  run_robot.sh
caterpillar_bringup/: README.md  package.xml  setup.cfg  setup.py
caterpillar_bringup/launch/: all.launch.py  interface.launch.py  robot.launch.py  web_joystick_robot.launch.py
interface_faces_web/: README.md  package.xml  setup.cfg  setup.py
interface_faces_web/interface_faces_web/: face_assets.py  face_demo_node.py  set_face_node.py  web_server_node.py
interface_faces_web/launch/: tablet_face.launch.py
interface_faces_web/web/: index.html
interface_faces_web/web/css/: style.css
interface_faces_web/web/js/: app.js  config.js
interface_pc/: README.md  package.xml  setup.cfg  setup.py
interface_pc/interface_pc/: node_interface.py
interface_pc/launch/: interface_pc.launch.py
interface_rpi/: README.md  package.xml  setup.cfg  setup.py
interface_rpi/interface_rpi/: node_interface.py
interface_rpi/launch/: interface_rpi.launch.py
roboclaw_ros2/: package.xml  readme.md  setup.py
roboclaw_ros2/config/: params.yaml
roboclaw_ros2/launch/: mobile_robot.launch.py  roboclaw_dual.launch.py  roboclaw_node.launch.py
roboclaw_ros2/roboclaw_ros2/nodes/: roboclaw_node.py
shortcuts/: COMANDOS_EJECUCION.txt  build_robot.sh  install_raspberry.sh  install_roboclaw_udev.sh  install_robot_dependencies.sh  run_all.sh  run_interface.sh  run_robot.sh  run_web_joystick_robot.sh
udev/: 99-roboclaw.rules
