<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>interface_rpi</name>
  <version>0.0.0</version>
  <description>ROS 2 graphical interface for the Jonas robot face display. This package is part of the Jonas robot project of UTEC, Lima, Peru, and is edited and maintained by mpuchuri@utec.edu.pe.</description>
  <maintainer email="mpuchuri@utec.edu.pe">mpuchuri</maintainer>
  <license>Apache-2.0</license>
  <url type="website">https://www.utec.edu.pe</url>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>ament_index_python</depend>
  <exec_depend>python3-pyqt5</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
